@@ -1,173 +1,7 @@
-//package com.revtalent.revtalent.service;
-//
-//import com.revtalent.revtalent.dto.PayrollDTO;
-//import com.revtalent.revtalent.model.Employee;
-//import com.revtalent.revtalent.model.Payroll;
-//import com.revtalent.revtalent.repository.EmployeeRepository;
-//import com.revtalent.revtalent.repository.PayrollRepository;
-//import lombok.RequiredArgsConstructor;
-//import org.springframework.stereotype.Service;
-//
-//import java.math.BigDecimal;
-//import java.util.List;
-//
-//@Service
-//@RequiredArgsConstructor
-//public class PayrollService {
-//
-//    private final PayrollRepository payrollRepository;
-//    private final EmployeeRepository employeeRepository;
-//
-//    // Get all payrolls for an employee
-//    public List<Payroll> getByEmployee(Long empId) {
-//        return payrollRepository.findByEmployee_IdOrderByPayYearDescPayMonthDesc(empId);
-//    }
-//
-//    // Get payroll for a specific month/year
-//    public Payroll getByEmployeeAndMonth(Long empId, int month, int year) {
-//        return payrollRepository.findByEmployee_IdAndPayMonthAndPayYear(empId, month, year)
-//                .orElseThrow(() -> new RuntimeException(
-//                        "Payroll not found for employee " + empId + " month " + month + "/" + year));
-//    }
-//
-//    // Get all payrolls for a specific month/year (HR view)
-//    public List<Payroll> getByMonth(int month, int year) {
-//        return payrollRepository.findByPayMonthAndPayYear(month, year);
-//    }
-//
-//    // Get by status for an employee
-//    public List<Payroll> getByStatus(Long empId, Payroll.Status status) {
-//        return payrollRepository.findByEmployee_IdAndStatus(empId, status);
-//    }
-//
-//    // Create payroll for an employee
-//    public Payroll create(Long empId, PayrollDTO dto) {
-//        // Prevent duplicate payroll for same month/year
-//        payrollRepository.findByEmployee_IdAndPayMonthAndPayYear(empId, dto.getPayMonth(), dto.getPayYear())
-//                .ifPresent(p -> { throw new RuntimeException(
-//                        "Payroll already exists for month " + dto.getPayMonth() + "/" + dto.getPayYear()); });
-//
-//        Employee emp = employeeRepository.findById(empId)
-//                .orElseThrow(() -> new RuntimeException("Employee not found: " + empId));
-//
-//        Payroll payroll = buildPayroll(emp, dto);
-//        return payrollRepository.save(payroll);
-//    }
-//
-//    // Update payroll
-//    public Payroll update(Long payrollId, PayrollDTO dto) {
-//        Payroll payroll = payrollRepository.findById(payrollId)
-//                .orElseThrow(() -> new RuntimeException("Payroll not found: " + payrollId));
-//
-//        if (payroll.getStatus() == Payroll.Status.PAID) {
-//            throw new RuntimeException("Cannot update a payroll that is already PAID");
-//        }
-//
-//        payroll.setBasicSalary(dto.getBasicSalary());
-//        payroll.setHra(dto.getHra());
-//        payroll.setAllowances(dto.getAllowances());
-//        payroll.setDeductions(dto.getDeductions());
-//        payroll.setPfDeduction(dto.getPfDeduction());
-//        payroll.setTaxDeduction(dto.getTaxDeduction());
-//
-//        // Calculate net salary in transient field
-//        payroll.setNetSalary(calculateNet(dto));
-//
-//        if (dto.getStatus() != null) {
-//            payroll.setStatus(dto.getStatus());
-//        }
-//
-//        return payrollRepository.save(payroll);
-//    }
-//
-//    // Mark payroll as PROCESSED
-//    public Payroll process(Long payrollId) {
-//        Payroll payroll = payrollRepository.findById(payrollId)
-//                .orElseThrow(() -> new RuntimeException("Payroll not found: " + payrollId));
-//
-//        if (payroll.getStatus() != Payroll.Status.PENDING) {
-//            throw new RuntimeException("Only PENDING payrolls can be processed");
-//        }
-//
-//        payroll.setStatus(Payroll.Status.PROCESSED);
-//        return payrollRepository.save(payroll);
-//    }
-//
-//    // Mark payroll as PAID
-//    public Payroll markPaid(Long payrollId) {
-//        Payroll payroll = payrollRepository.findById(payrollId)
-//                .orElseThrow(() -> new RuntimeException("Payroll not found: " + payrollId));
-//
-//        if (payroll.getStatus() != Payroll.Status.PROCESSED) {
-//            throw new RuntimeException("Only PROCESSED payrolls can be marked as PAID");
-//        }
-//
-//        payroll.setStatus(Payroll.Status.PAID);
-//        return payrollRepository.save(payroll);
-//    }
-//
-//    // Bulk process all PENDING payrolls for a month
-//    public List<Payroll> bulkProcess(int month, int year) {
-//        List<Payroll> pending = payrollRepository.findByPayMonthAndPayYear(month, year)
-//                .stream()
-//                .filter(p -> p.getStatus() == Payroll.Status.PENDING)
-//                .toList();
-//
-//        pending.forEach(p -> p.setStatus(Payroll.Status.PROCESSED));
-//        return payrollRepository.saveAll(pending);
-//    }
-//
-//    // Delete payroll (only PENDING)
-//    public void delete(Long payrollId) {
-//        Payroll payroll = payrollRepository.findById(payrollId)
-//                .orElseThrow(() -> new RuntimeException("Payroll not found: " + payrollId));
-//
-//        if (payroll.getStatus() != Payroll.Status.PENDING) {
-//            throw new RuntimeException("Only PENDING payrolls can be deleted");
-//        }
-//
-//        payrollRepository.deleteById(payrollId);
-//    }
-//
-//    // ── Helpers ──────────────────────────────────────────────────────────────
-//
-//    private Payroll buildPayroll(Employee emp, PayrollDTO dto) {
-//        Payroll p = Payroll.builder()
-//                .employee(emp)
-//                .payMonth(dto.getPayMonth())
-//                .payYear(dto.getPayYear())
-//                .basicSalary(orZero(dto.getBasicSalary()))
-//                .hra(orZero(dto.getHra()))
-//                .allowances(orZero(dto.getAllowances()))
-//                .deductions(orZero(dto.getDeductions()))
-//                .pfDeduction(orZero(dto.getPfDeduction()))
-//                .taxDeduction(orZero(dto.getTaxDeduction()))
-//                .status(dto.getStatus() != null ? dto.getStatus() : Payroll.Status.PENDING)
-//                .build();
-//
-//        p.setNetSalary(calculateNet(dto));
-//        return p;
-//    }
-//
-//    private BigDecimal calculateNet(PayrollDTO dto) {
-//        return orZero(dto.getBasicSalary())
-//                .add(orZero(dto.getHra()))
-//                .add(orZero(dto.getAllowances()))
-//                .subtract(orZero(dto.getDeductions()))
-//                .subtract(orZero(dto.getPfDeduction()))
-//                .subtract(orZero(dto.getTaxDeduction()));
-//    }
-//
-//    private BigDecimal orZero(BigDecimal value) {
-//        return value != null ? value : BigDecimal.ZERO;
-//    }
-//}
-
-
 package com.revtalent.revtalent.service;
 
 import com.revtalent.revtalent.dto.PayrollDTO;
-import com.revtalent.revtalent.dto.PayrollResponseDTO;
+import com.revtalent.revtalent.dto.payroll.PayrollResponse;
 import com.revtalent.revtalent.model.Employee;
 import com.revtalent.revtalent.model.Payroll;
 import com.revtalent.revtalent.repository.EmployeeRepository;
@@ -177,7 +11,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -186,44 +22,117 @@ public class PayrollService {
     private final PayrollRepository payrollRepository;
     private final EmployeeRepository employeeRepository;
 
+    // ── Private Mapper ────────────────────────────────────────────────────────
+
+    private PayrollResponse mapToResponse(Payroll p) {
+        PayrollResponse res = new PayrollResponse();
+        res.setId(p.getId());
+        res.setEmployeeId(p.getEmployee().getId());
+        res.setEmployeeName(p.getEmployee().getUser().getName());
+        res.setEmployeeCode(p.getEmployee().getEmployeeCode());
+        res.setDepartmentName(p.getEmployee().getDepartment().getName());
+        res.setPayMonth(p.getPayMonth());
+        res.setPayYear(p.getPayYear());
+        res.setBasicSalary(p.getBasicSalary());
+        res.setHra(p.getHra());
+        res.setAllowances(p.getAllowances());
+        res.setDeductions(p.getDeductions());
+        res.setPfDeduction(p.getPfDeduction());
+        res.setTaxDeduction(p.getTaxDeduction());
+        res.setNetPay(p.getNetPay());
+        res.setStatus(p.getStatus());
+        res.setProcessedAt(p.getProcessedAt());
+        return res;
+    }
+
+    // ── Generate Payroll (bulk for all employees) ─────────────────────────────
+
+    @Transactional
+    public List<PayrollResponse> generatePayroll(int month, int year) {
+        List<Employee> employees = employeeRepository.findAll();
+        List<Payroll> result = new ArrayList<>();
+
+        for (Employee emp : employees) {
+            boolean exists = payrollRepository.findByEmployee(emp).stream()
+                    .anyMatch(p -> p.getPayMonth() == month && p.getPayYear() == year);
+
+            if (exists) continue;
+
+            Payroll p = Payroll.builder()
+                    .employee(emp)
+                    .payMonth(month)
+                    .payYear(year)
+                    .basicSalary(BigDecimal.valueOf(50000))
+                    .hra(BigDecimal.valueOf(10000))
+                    .allowances(BigDecimal.valueOf(5000))
+                    .deductions(BigDecimal.valueOf(2000))
+                    .pfDeduction(BigDecimal.valueOf(1500))
+                    .taxDeduction(BigDecimal.valueOf(3000))
+                    .status(Payroll.Status.PENDING)
+                    .build();
+
+            result.add(p);
+        }
+
+        return payrollRepository.saveAll(result)
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+    }
+
+    // ── Get All Payrolls (HR/Manager view) ────────────────────────────────────
+
     @Transactional(readOnly = true)
-    public List<PayrollResponseDTO> getByEmployee(Long empId) {
-        // Validate employee exists first
-        employeeRepository.findById(empId)
+    public List<PayrollResponse> getAll() {
+        return payrollRepository.findAll()
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+    }
+
+    // ── Get All Payrolls for a specific month/year (HR view) ──────────────────
+
+    @Transactional(readOnly = true)
+    public List<PayrollResponse> getByMonth(int month, int year) {
+        return payrollRepository.findByPayMonthAndPayYear(month, year)
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+    }
+
+    // ── Employee-scoped endpoints ─────────────────────────────────────────────
+
+    @Transactional(readOnly = true)
+    public List<PayrollResponse> getByEmployee(Long empId) {
+        Employee emp = employeeRepository.findById(empId)
                 .orElseThrow(() -> new RuntimeException("Employee not found: " + empId));
         return payrollRepository.findByEmployee_IdOrderByPayYearDescPayMonthDesc(empId)
                 .stream()
-                .map(PayrollResponseDTO::from)
-                .toList();
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public PayrollResponseDTO getByEmployeeAndMonth(Long empId, int month, int year) {
+    public PayrollResponse getByEmployeeAndMonth(Long empId, int month, int year) {
         Payroll p = payrollRepository
                 .findByEmployee_IdAndPayMonthAndPayYear(empId, month, year)
                 .orElseThrow(() -> new RuntimeException(
                         "Payroll not found for employee " + empId + " — " + month + "/" + year));
-        return PayrollResponseDTO.from(p);
+        return mapToResponse(p);
     }
 
     @Transactional(readOnly = true)
-    public List<PayrollResponseDTO> getByMonth(int month, int year) {
-        return payrollRepository.findByPayMonthAndPayYear(month, year)
-                .stream()
-                .map(PayrollResponseDTO::from)
-                .toList();
-    }
-
-    @Transactional(readOnly = true)
-    public List<PayrollResponseDTO> getByStatus(Long empId, Payroll.Status status) {
+    public List<PayrollResponse> getByStatus(Long empId, Payroll.Status status) {
         return payrollRepository.findByEmployee_IdAndStatus(empId, status)
                 .stream()
-                .map(PayrollResponseDTO::from)
-                .toList();
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
+    // ── CRUD ─────────────────────────────────────────────────────────────────
+
     @Transactional
-    public PayrollResponseDTO create(Long empId, PayrollDTO dto) {
+    public PayrollResponse create(Long empId, PayrollDTO dto) {
         payrollRepository
                 .findByEmployee_IdAndPayMonthAndPayYear(empId, dto.getPayMonth(), dto.getPayYear())
                 .ifPresent(p -> { throw new RuntimeException(
@@ -233,11 +142,11 @@ public class PayrollService {
                 .orElseThrow(() -> new RuntimeException("Employee not found: " + empId));
 
         Payroll payroll = buildPayroll(emp, dto);
-        return PayrollResponseDTO.from(payrollRepository.save(payroll));
+        return mapToResponse(payrollRepository.save(payroll));
     }
 
     @Transactional
-    public PayrollResponseDTO update(Long payrollId, PayrollDTO dto) {
+    public PayrollResponse update(Long payrollId, PayrollDTO dto) {
         Payroll payroll = findOrThrow(payrollId);
 
         if (payroll.getStatus() == Payroll.Status.PAID) {
@@ -256,11 +165,48 @@ public class PayrollService {
             payroll.setStatus(dto.getStatus());
         }
 
-        return PayrollResponseDTO.from(payrollRepository.save(payroll));
+        return mapToResponse(payrollRepository.save(payroll));
     }
 
     @Transactional
-    public PayrollResponseDTO process(Long payrollId) {
+    public void delete(Long payrollId) {
+        Payroll payroll = findOrThrow(payrollId);
+
+        if (payroll.getStatus() != Payroll.Status.PENDING) {
+            throw new RuntimeException("Only PENDING payrolls can be deleted");
+        }
+
+        payrollRepository.deleteById(payrollId);
+    }
+
+    // ── Status Transitions ────────────────────────────────────────────────────
+
+    @Transactional
+    public List<PayrollResponse> processPayroll() {
+        List<Payroll> list = payrollRepository.findAll();
+
+        for (Payroll p : list) {
+            if (p.getStatus() != Payroll.Status.PENDING) continue;
+
+            BigDecimal net = orZero(p.getBasicSalary())
+                    .add(orZero(p.getHra()))
+                    .add(orZero(p.getAllowances()))
+                    .subtract(orZero(p.getDeductions()))
+                    .subtract(orZero(p.getPfDeduction()))
+                    .subtract(orZero(p.getTaxDeduction()));
+
+            p.setNetPay(net);
+            p.setStatus(Payroll.Status.PROCESSED);
+        }
+
+        return payrollRepository.saveAll(list)
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Transactional
+    public PayrollResponse process(Long payrollId) {
         Payroll payroll = findOrThrow(payrollId);
 
         if (payroll.getStatus() != Payroll.Status.PENDING) {
@@ -268,11 +214,11 @@ public class PayrollService {
         }
 
         payroll.setStatus(Payroll.Status.PROCESSED);
-        return PayrollResponseDTO.from(payrollRepository.save(payroll));
+        return mapToResponse(payrollRepository.save(payroll));
     }
 
     @Transactional
-    public PayrollResponseDTO markPaid(Long payrollId) {
+    public PayrollResponse markPaid(Long payrollId) {
         Payroll payroll = findOrThrow(payrollId);
 
         if (payroll.getStatus() != Payroll.Status.PROCESSED) {
@@ -280,11 +226,11 @@ public class PayrollService {
         }
 
         payroll.setStatus(Payroll.Status.PAID);
-        return PayrollResponseDTO.from(payrollRepository.save(payroll));
+        return mapToResponse(payrollRepository.save(payroll));
     }
 
     @Transactional
-    public List<PayrollResponseDTO> bulkProcess(int month, int year) {
+    public List<PayrollResponse> bulkProcess(int month, int year) {
         List<Payroll> pending = payrollRepository.findByPayMonthAndPayYear(month, year)
                 .stream()
                 .filter(p -> p.getStatus() == Payroll.Status.PENDING)
@@ -297,19 +243,8 @@ public class PayrollService {
         pending.forEach(p -> p.setStatus(Payroll.Status.PROCESSED));
         return payrollRepository.saveAll(pending)
                 .stream()
-                .map(PayrollResponseDTO::from)
-                .toList();
-    }
-
-    @Transactional
-    public void delete(Long payrollId) {
-        Payroll payroll = findOrThrow(payrollId);
-
-        if (payroll.getStatus() != Payroll.Status.PENDING) {
-            throw new RuntimeException("Only PENDING payrolls can be deleted");
-        }
-
-        payrollRepository.deleteById(payrollId);
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
     // ── Helpers ───────────────────────────────────────────────────────────────
